--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </script>
   </head>
   <body>
-    <h3>Welcome, I'm glad you're here. To save you time, I've already added some sample items and warehouses for testing.</h3>
+    <h3>Welcome, I'm glad you're here. To save you time, I've already added some sample warehouses for testing. There are no items currently.</h3>
     <form action="/v1/items" method="GET">
     <input value="List Items" type="submit"/>
     </form>
